# Pollsome

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_bot.py
.github/workflows/: main.yml
